--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <nav>
         <tr>
           <div>
-          <td><a href=""><img src="IMG/INICIO.gif" width="165px"></a></td>
+          <td><a href="index.html"><img src="IMG/INICIO.gif" width="165px"></a></td>
           <td><a href="Contacto.html"><img src="IMG/Cotactos.gif" width="165px"></a></td>
           <td><a href="terror.html"><img src="IMG/TERROR.gif" width="165px"></a></td>
           <td><a href="tienda.html"><img src="IMG/Tienda.gif" width="165px"></a></td>
           <td><a href="ciencia-ficcion.html"><img src="IMG/CIENCIA-FICCION.gif" width="165px"></a></td>
-          <td><a href=""><img src="IMG/ACCION.gif" width="165px"></a></td>
+          <td><a href="Accion.html"><img src="IMG/ACCION.gif" width="165px"></a></td>
           <td>&nbsp;</td>
           <td>&nbsp;</td>
           </div>
