--- a/ciencia-ficcion.html
+++ b/ciencia-ficcion.html
@@ -33,7 +33,7 @@
           <td><a href="terror.html"><img src="IMG/TERROR.gif" width="165px"></a></td>
           <td><a href="tienda.html"><img src="IMG/Tienda.gif" width="165px"></a></td>
           <td><a href="ciencia-ficcion.html"><img src="IMG/CIENCIA-FICCION.gif" width="165px"></a></td>
-          <td><a href=""><img src="IMG/ACCION.gif" width="165px"></a></td>
+          <td><a href="Accion.html"><img src="IMG/ACCION.gif" width="165px"></a></td>
           <td>&nbsp;</td>
           <td>&nbsp;</td>
           </div>
